crates/aranya-policy-compiler/tests/data/facts/immutable_update_unknown.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: unknown error
  |
8 |             update Foo[i: 1]=>{a: 1} to {a: 0}
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ fact `Foo` is immutable so it cannot be updated.
